update dependencies and versions for rebuild